--- a/index.htm
+++ b/index.htm
@@ -219,9 +219,6 @@
                         <div>
                             <p><i class="fas fa-map-marker-alt"></i> Noakhali, Bangladesh</p>
                             <p><i class="fas fa-envelope"></i>Email: <a href="mailto:mohammadrahi003@gmail.com" target="_blank"> mohammadrahi003@gmail.com</a></p>
-
-
-
                             <div class="social_contact">
                                 <a href="https://github.com/mohammad-rahi" target="_blank"><i class="fab fa-github"></i></a>
                                 <a href="https://linkedin.com/in/mohammadrahi03" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -238,6 +235,7 @@
         </main>
     </div>
 
+    <!--===== App =====-->
     <script src="./app.js" defer></script>
 </body>
 
