Make responsive nan under 576px

--- a/index.htm
+++ b/index.htm
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio - Mohammad Rahi</title>
+    <title>Mohammad Rahi</title>
     <!--===== Font Awesome Icons =====-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--===== Styles =====-->
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./assets/img/rahi.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -21,11 +22,11 @@
         <aside>
             <nav>
                 <ul class="nav_menu">
-                    <li><a href="#" class="active" title="Home"><i class="fas fa-home"></i>Home</a></li>
-                    <li><a href="#about" title="About"><i class="fas fa-user"></i>About</a></li>
-                    <li><a href="#skills" title="Skills"><i class="fas fa-code"></i>Skills</a></li>
-                    <li><a href="#projects" title="Projects"><i class="fas fa-list"></i>Projects</a></li>
-                    <li><a href="#contact" title="Contact"><i class="fas fa-envelope"></i>Contact</a></li>
+                    <li><a href="#" class="active" title="Home"><i class="fas fa-home"></i><span>Home</span></a></li>
+                    <li><a href="#about" title="About"><i class="fas fa-user"></i><span>About</span></a></li>
+                    <li><a href="#skills" title="Skills"><i class="fas fa-code"></i><span>Skills</span></a></li>
+                    <li><a href="#projects" title="Projects"><i class="fas fa-list"></i><span>Projects</span></a></li>
+                    <li><a href="#contact" title="Contact"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
                 </ul>
             </nav>
         </aside>
