Make responsive nan under 576px

--- a/index.htm
+++ b/index.htm
@@ -217,7 +217,7 @@
                 <div class="section">
                     <h2><span>/</span> Contact</h2>
                     <div class="contact_wrapper">
-                        <div>
+                        <div class="contact_info">
                             <p><i class="fas fa-map-marker-alt"></i> Noakhali, Bangladesh</p>
                             <p><i class="fas fa-envelope"></i>Email: <a href="mailto:mohammadrahi003@gmail.com" target="_blank"> mohammadrahi003@gmail.com</a></p>
                             <div class="social_contact">
