--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mohammad Rahi</title>
+    <meta name="description" content="I'm Mohammad Rahi, a skilled web designer. I'm passonate to work with HTML5, CSS3, JavaScript, etc.">
+    <meta name="google-site-verification" content="cRBbikMwu3B94iD6noRI5fT-RLAOScapvH-MbOaEgmU" />
+    <title>Mohammad Rahi | Web Designer</title>
     <!--===== Font Awesome Icons =====-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
