--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--===== Styles =====-->
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./assets/img/rahi.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
