Add SEO to skill

--- a/index.htm
+++ b/index.htm
@@ -109,6 +109,10 @@
                                 <i class="fab fa-bootstrap"></i>
                                 <p>Bootstrap5</p>
                             </div>
+                            <div class="skill">
+                                <i class="fab fa-searchengin"></i>
+                                <p>SEO</p>
+                            </div>
                         </div>
                         <div class="tools">
                             <div class="skill">
