Added meta theme-color

--- a/index.htm
+++ b/index.htm
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="I'm Mohammad Rahi, a skilled web designer. I'm passonate to work with HTML5, CSS3, JavaScript, etc.">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="I'm Mohammad Rahi, a skilled web designer. I'm passonate to work with HTML5, CSS3, JavaScript, etc." />
     <meta name="google-site-verification" content="cRBbikMwu3B94iD6noRI5fT-RLAOScapvH-MbOaEgmU" />
+    <meta name="theme-color" content="#16202a" />
     <title>Mohammad Rahi | Web Designer</title>
     <!--===== Font Awesome Icons =====-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
