--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="I'm Mohammad Rahi, a skilled web designer. I'm passonate to work with HTML5, CSS3, JavaScript, etc." />
+    <meta name="description"
+        content="I'm Mohammad Rahi, a skilled web designer. I'm passonate to work with HTML5, CSS3, JavaScript, etc." />
     <meta name="google-site-verification" content="cRBbikMwu3B94iD6noRI5fT-RLAOScapvH-MbOaEgmU" />
     <meta name="theme-color" content="#16202a" />
     <title>Mohammad Rahi | Web Designer</title>
@@ -62,7 +63,7 @@
                                 <img src="./assets/img/rahi.jpg" alt="Mohammad Rahi">
                             </div>
                         </div>
-                        <div class="column">
+                        <div class="column about_info">
                             <div>
                                 <p class="first_para">To be able to work in your organization as a Junior Frontend Web
                                     Developer where I can fully
@@ -107,6 +108,10 @@
                                 <p>JavaScript</p>
                             </div>
                             <div class="skill">
+                                <i class="fab fa-react"></i>
+                                <p>React</p>
+                            </div>
+                            <div class="skill">
                                 <i class="fab fa-bootstrap"></i>
                                 <p>Bootstrap5</p>
                             </div>
@@ -127,6 +132,10 @@
                             <div class="skill">
                                 <i class="fas fa-terminal"></i>
                                 <p>Terminal</p>
+                            </div>
+                            <div class="skill">
+                                <i class="fab fa-canva"></i>
+                                <p>Canva Pro</p>
                             </div>
                         </div>
                     </div>
@@ -226,12 +235,17 @@
                     <div class="contact_wrapper">
                         <div class="contact_info">
                             <p><i class="fas fa-map-marker-alt"></i> Noakhali, Bangladesh</p>
-                            <p><i class="fas fa-envelope"></i>Email: <a href="mailto:mohammadrahi003@gmail.com" target="_blank"> mohammadrahi003@gmail.com</a></p>
+                            <p><i class="fas fa-envelope"></i>Email: <a href="mailto:mohammadrahi003@gmail.com"
+                                    target="_blank"> mohammadrahi003@gmail.com</a></p>
                             <div class="social_contact">
-                                <a href="https://github.com/mohammad-rahi" target="_blank"><i class="fab fa-github"></i></a>
-                                <a href="https://linkedin.com/in/mohammadrahi03" target="_blank"><i class="fab fa-linkedin"></i></a>
-                                <a href="https://facebook.com/codewithrahi" target="_blank"><i class="fab fa-facebook"></i></a>
-                                <a href="https://tech-sheet.blogspot.com" target="_blank"><i class="fas fa-rss-square"></i></a>
+                                <a href="https://github.com/mohammad-rahi" target="_blank"><i
+                                        class="fab fa-github"></i></a>
+                                <a href="https://linkedin.com/in/mohammadrahi03" target="_blank"><i
+                                        class="fab fa-linkedin"></i></a>
+                                <a href="https://facebook.com/codewithrahi" target="_blank"><i
+                                        class="fab fa-facebook"></i></a>
+                                <a href="https://tech-sheet.blogspot.com" target="_blank"><i
+                                        class="fas fa-rss-square"></i></a>
                             </div>
                         </div>
                         <div>
