Add canva icon on skill

--- a/index.htm
+++ b/index.htm
@@ -133,8 +133,10 @@
                                 <i class="fas fa-terminal"></i>
                                 <p>Terminal</p>
                             </div>
-                            <div class="skill">
-                                <i class="fab fa-canva"></i>
+                            <div class="skill canva">
+                                <i>
+                                    <img src="./assets/img/canva.png" alt="Canva">
+                                </i>
                                 <p>Canva Pro</p>
                             </div>
                         </div>
