--- a/index.htm
+++ b/index.htm
@@ -155,8 +155,8 @@
                                 <div class="project_info">
                                     <div>
                                         <h3>SkillHub.</h3>
-                                        <h5>This is a <mark>Image</mark> to html project with toggle light and dark
-                                            mode.</h5>
+                                        <!-- <h5>This is a <mark>Image</mark> to html project with toggle light and dark
+                                            mode.</h5>  -->
                                         <p>
                                             This website is full responsive for all devices (smartphones, tablets,
                                             computers, etc). In this website you'll see some section such as hero,
@@ -177,7 +177,7 @@
                                 <div class="project_info">
                                     <div>
                                         <h3>Fresh Coder.</h3>
-                                        <h5>This is a <mark>Figma</mark> to html project.</h5>
+                                        <!-- <h5>This is a <mark>Figma</mark> to html project.</h5>  -->
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium itaque
                                             repellendus quod illum nam enim ut, corrupti architecto deserunt nisi.</p>
                                         <div class="project_links">
@@ -196,7 +196,7 @@
                                 <div class="project_info">
                                     <div>
                                         <h3>Green Forest.</h3>
-                                        <h5>This is a <mark>Image</mark> to html project.</h5>
+                                        <!-- <h5>This is a <mark>Image</mark> to html project.</h5>  -->
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium itaque
                                             repellendus quod illum nam enim ut, corrupti architecto deserunt nisi.</p>
                                         <div class="project_links">
@@ -215,7 +215,7 @@
                                 <div class="project_info">
                                     <div>
                                         <h3>GitHub Profile</h3>
-                                        <h5>mohammad-rahi</h5>
+                                       <!-- <h5>mohammad-rahi</h5> -->
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium itaque
                                             repellendus quod illum nam enim ut, corrupti architecto deserunt nisi.</p>
                                         <div class="project_links">
