add label on skill seciton

--- a/index.htm
+++ b/index.htm
@@ -94,6 +94,7 @@
                 <div class="section">
                     <h2><span>/</span> My Skills</h2>
                     <div class="skill_wrapper">
+                        <h3><span>Frontend</span></h3>
                         <div class="frontend">
                             <div class="skill">
                                 <i class="fab fa-html5"></i>
@@ -120,6 +121,7 @@
                                 <p>SEO</p>
                             </div>
                         </div>
+                        <h3><span>Tools</span></h3>
                         <div class="tools">
                             <div class="skill">
                                 <i class="fab fa-git-alt"></i>
