Added selection styles

--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
             </section>
 
             <!--===== About =====-->
-            <section class="about" id="about" oncontextmenu="return false;">
+            <section class="about" id="about">
                 <div class="section">
                     <h2><span>/</span> About</h2>
                     <div class="about_wrapper row">
